--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
   position: absolute;   
   transform: translate(-50%, -50%);   
   box-sizing: border-box;
+  padding: 70px 30px;
 }
 
 .avatar{
@@ -27,3 +28,49 @@ body{
 	top: -50px;
 	left: calc(50% - 50px);
 }
+
+h1{
+	margin: 0;
+	padding: 0 0 20px;
+	font-size: 22px;
+	text-align: center;
+}
+
+.createbox p{
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+	font-size: 16px;
+}
+
+.createbox input{
+	width: 100%;
+	margin-bottom: 20px;
+}
+
+.createbox input[type="text"], input[type="password"]{
+	border: none;
+	border-bottom: 1px solid #fff;
+	background: transparent;
+	outline: none;
+	height: 40px;
+	color: #fff;
+	font-size: 16px;
+}
+
+.createbox input[type="submit"]{
+	border: none;
+	outline: none;
+	height: 40px;
+	background: #00ffff;
+	color: #fff;
+	font-size: 18px;
+	border-size: 20px; 
+}
+
+.createbox input[type="submit"]:hover{
+	cursor: pointer;
+	background: #ffc107;
+	color: #000;
+}
+
