--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 .createbox{   
-	width: 320px;
+	width: 30s0px;
   height: 520px;   
   background: #000;   
   color: #fff;   
@@ -23,6 +23,7 @@ body{
   box-sizing: border-box;
   padding: 70px 30px;
   opacity: 0.75;
+	align-items: center;
 }
 
 .avatar{
@@ -73,6 +74,8 @@ h1{
 	font-size: 16px;
 	border-size: 20px; 
 	margin-bottom: 30px;
+	align-self: center;
+
 }
 
 .createbox input[type="submit"]:hover{
