--- a/style.css
+++ b/style.css
@@ -1,23 +1,29 @@
+
 body{
 	margin: 0;
 	padding: 0;
-	background: url(pics/pic1.jpg);
-	background-size: cover;
-	background-position: center;
 	font-family: sans-serif;
 }
 
+.background{
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
 .createbox{   
-	width: 320px;
-  height: 420px;   
+	width: 30s0px;
+  height: 520px;   
   background: #000;   
   color: #fff;   
-  top: 50%;   
+  top: 60%;   
   left: 50%;   
   position: absolute;   
   transform: translate(-50%, -50%);   
   box-sizing: border-box;
   padding: 70px 30px;
+  opacity: 0.75;
+	align-items: center;
 }
 
 .avatar{
@@ -40,12 +46,12 @@ h1{
 	margin: 0;
 	padding: 0;
 	font-weight: bold;
-	font-size: 16px;
+	font-size: 15px;
 }
 
 .createbox input{
-	width: 100%;
-	margin-bottom: 20px;
+	width: 90%;
+	margin-bottom: 16px;
 }
 
 .createbox input[type="text"], input[type="password"]{
@@ -55,17 +61,21 @@ h1{
 	outline: none;
 	height: 40px;
 	color: #fff;
-	font-size: 16px;
+	font-size: 12px;
 }
 
 .createbox input[type="submit"]{
 	border: none;
 	outline: none;
+	border-radius: 10px;
 	height: 40px;
-	background: #00ffff;
+	background: #0000ff;
 	color: #fff;
-	font-size: 18px;
+	font-size: 16px;
 	border-size: 20px; 
+	margin-bottom: 30px;
+	align-self: center;
+
 }
 
 .createbox input[type="submit"]:hover{
@@ -74,3 +84,8 @@ h1{
 	color: #000;
 }
 
+.Link{
+	text-decoration: underline;
+	text-align: center;
+	line-height: 40px;
+}
